# CppPython

./: CMakeLists.txt  build  build.bat  clear  cpppython.cpp  cpppython.hpp  main.cpp  py_module.py
tests/: CMakeLists.txt  test.cpp
